[tool.poetry]
name = "liminal"
version = "0.1.0"
description = "liminal using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
liminal = "liminal.main:run"
train = "liminal.main:train"
replay = "liminal.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
